; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_xmlstream.c_endElement.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_xmlstream.c_endElement.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ParserStruct = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"%5lu   %10lu   %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @endElement to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @endElement(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.ParserStruct*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.ParserStruct*
  store %struct.ParserStruct* %7, %struct.ParserStruct** %5, align 8
  %8 = load %struct.ParserStruct*, %struct.ParserStruct** %5, align 8
  %9 = getelementptr inbounds %struct.ParserStruct, %struct.ParserStruct* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = add nsw i32 %10, -1
  store i32 %11, i32* %9, align 4
  %12 = load %struct.ParserStruct*, %struct.ParserStruct** %5, align 8
  %13 = getelementptr inbounds %struct.ParserStruct, %struct.ParserStruct* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.ParserStruct*, %struct.ParserStruct** %5, align 8
  %16 = getelementptr inbounds %struct.ParserStruct, %struct.ParserStruct* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %18, i32* %19)
  ret void
}

declare dso_local i32 @printf(i8*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
